# python-sh-subprocess

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.rst  SECURITY.md  pyproject.toml  sh.py  sh.pyi  tox.ini
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: main.yml
docs/: requirements.txt
docs/source/: conf.py  fulldoc.rst  index.rst  ref_to_fulldoc.rst
docs/source/sections/: contrib.rst  exit_codes.rst  migration.rst  special_arguments.rst
tests/: sh_test.py
