[project]
name = "sh"
version = "2.2.3"
description = "Python subprocess replacement"
authors = [
    {name = "Andrew Moffat", email = "arwmoffat@gmail.com"},
]
maintainers = [
    {name = "Andrew Moffat", email = "arwmoffat@gmail.com"},
]
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8.1,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://sh.readthedocs.io/"
Repository = "https://github.com/amoffat/sh"
Documentation = "https://sh.readthedocs.io/"

[dependency-groups]
dev = [
    "tox>=4.6.4",
    "tox-uv>=1",
    "ruff>=0.4",
    "coverage>=7.2.7",
    "rstcheck>=6.1.2",
    "sphinx>=1.6,<7",
    "sphinx-rtd-theme>=1.2.2",
    "pytest>=7.4.0",
    "mypy>=1.4.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E203"]

[tool.hatch.build.targets.wheel]
include = ["sh.py", "sh.pyi", "py.typed"]

[tool.hatch.build.targets.sdist]
include = ["sh.py", "sh.pyi", "py.typed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
